--- a/code/app/build.gradle
+++ b/code/app/build.gradle
@@ -25,7 +25,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    implementation project(':lib-magicbox')
+//    implementation project(':lib-magicbox')
+
+    implementation 'osp.leobert.android:lib-magicbox:1.1.0'
 
     compile 'com.google.code.gson:gson:2.8.2'
 }
