--- a/code/app/build.gradle
+++ b/code/app/build.gradle
@@ -30,4 +30,10 @@ dependencies {
     implementation 'osp.leobert.android:lib-magicbox:1.1.0'
 
     compile 'com.google.code.gson:gson:2.8.2'
+
+    implementation "com.google.auto.value:auto-value:1.5.3"
+    annotationProcessor  "com.google.auto.value:auto-value:1.5.3"
+
+    implementation 'com.ryanharter.auto.value:auto-value-gson:0.4.4'
+    annotationProcessor 'com.ryanharter.auto.value:auto-value-gson:0.4.4'
 }
