--- a/code/lib-magicbox/build.gradle
+++ b/code/lib-magicbox/build.gradle
@@ -26,17 +26,17 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 28
 
 
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 26
-        versionCode 111
-        versionName "1.1.1"
+        targetSdkVersion 28
+        versionCode 112
+        versionName "1.1.2"
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     }
 
@@ -57,10 +57,10 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
 
 
@@ -81,7 +81,7 @@ apply plugin: 'com.jfrog.bintray'
 group = "osp.leobert.android"
 
 // 根节点添加
-version = "1.1.0"
+version = "1.1.3"
 
 // 根节点添加
 def siteUrl = 'https://github.com/leobert-lan/MagicBox'    // project homepage
